Update text.md